influxdb3_enterprise/buffer/src/snapshots/influxdb3_pro_buffer__replica__tests__map_wal_content_for_replica_existing_db_new_table-2.snap
---
source: influxdb3_pro/buffer/src/replica.rs
description: id map after mapping replica WAL content
expression: id_map
---
dbs:
  1: 0
tables:
  1: 0
  2: 3
columns:
  3: 0
  4: 1
  5: 2
  6: 8
  7: 9
