influxdb3_enterprise/buffer/src/snapshots/influxdb3_pro_buffer__replica__tests__map_wal_content_for_replica_existing_db_new_table-4.snap
---
source: influxdb3_pro/buffer/src/replica.rs
description: table definition in primary catalog after mapping and applying replica WAL content
expression: tbl
---
table_id: 3
table_name: pow
key:
  - 8
cols:
  - - 9
    - name: f1
      id: 9
      type: bool
      influx_type: field
      nullable: true
  - - 8
    - name: t1
      id: 8
      type:
        dict:
          - i32
          - str
      influx_type: tag
      nullable: false
deleted: false
